fixed errors:collapsed navbar icon/drop down menu not working

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -33,7 +33,7 @@ body {
   background-color: red;
 }
 
-span {
+.promo-count {
   float:left;
   margin-top: -34px;
   margin-left: 95px;
@@ -89,12 +89,12 @@ span {
     top:0; left:0;
     background:rgba(0,0,0,0.6);
     opacity:20;
-    transition: all 0.5s;
-    -webkit-transition: all 0.5s;
+    transition: all 1s;
+    -webkit-transition: all 1s;
 }
 .four-box:hover:after {
-    transition: all 0.5s;
-    -webkit-transition: all 0.5s;
+    transition: all 1s;
+    -webkit-transition: all 1ss;
     position: relative;
     z-index: -1;
     opacity:0;
